# trt_ssd

./: CMakeLists.txt  README.md
src/detect/: personDetect.cpp  personDetect.h
src/engine/: engine.cpp  engine.h
src/executa/: main.cpp
